objects/VPPSR_Search_Result__c.object
<CustomObject>
    <fields>
        <fullName>Search_By_Serial_Num_Resp_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search By Serial Num Resp Type</label>
        <referenceTo>VPPSR_Search_By_Serial_Num_Resp_Type__c</referenceTo>
        <relationshipName>Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>searchResultRetrievedDateTime__c</fullName>
        <label>searchResultRetrievedDateTime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transitionalPeriodMessage__c</fullName>
        <label>transitionalPeriodMessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Search Result</label>
    <nameField>
        <displayFormat>VSR-{000000}</displayFormat>
        <label>VPPSR Search Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Search Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>